// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown.vue renders OXD Select Dropdown empty 1`] = `
<div role="listbox" class="oxd-select-dropdown">
  <div class="oxd-select-dropdown-inner">
    <div role="option" class="oxd-select-option">No results found</div>
  </div>
</div>
`;

exports[`SelectDropdown.vue renders OXD Select Dropdown not empty 1`] = `
<div role="listbox" class="oxd-select-dropdown">
  <div class="oxd-select-dropdown-inner">
    <!--v-if-->
  </div>
</div>
`;
